# first-dioxus-app

./: Cargo.toml  Dioxus.toml  README.md
.agent/workflows/: demo-recorder.md
assets/: tailwind.css
assets/styling/: main.css
src/: config.rs  hotkey.rs  main.rs  shared_state.rs  tray.rs
src/capture/: recorder.rs
src/components/: mod.rs
src/views/: dashboard.rs  mod.rs  navbar.rs  settings.rs
src/zoom/: camera.rs  diagnostics.rs  event_log.rs  mod.rs  post_process.rs  render_engine.rs
src/zoom/shaders/: zoom.wgsl
