[package]
name = "demo-recorder"
version = "0.1.0"
authors = ["babybirdprd <babybirdprd@gmail.com>"]
edition = "2021"
description = "Screen recorder with smart auto-zoom for demos"

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop", "router"] }
global-hotkey = "0.6"
tray-icon = "0.19"
device_query = "2"
tokio = { version = "1", features = ["full", "sync"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Screen capture - platform specific
[target.'cfg(windows)'.dependencies]
windows-capture = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# crabgrab or screencapturekit bindings when building on macOS

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
