[package]
name = "demo-recorder"
version = "0.1.0"
authors = ["babybirdprd <babybirdprd@gmail.com>"]
edition = "2021"
description = "Screen recorder with smart auto-zoom for demos"

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop", "router"] }
global-hotkey = "0.6"
tray-icon = "0.19"
device_query = "2"
tokio = { version = "1", features = ["full", "sync"] }
image = "0.25"
video-rs = { version = "0.10", features = ["ndarray"] }
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
futures-util = "0.3"
wgpu = "22.1"
bytemuck = { version = "1.19", features = ["derive"] }
pollster = "0.3"

# Screen capture - platform specific
[target.'cfg(windows)'.dependencies]
windows-capture = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# crabgrab or screencapturekit bindings when building on macOS

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
